<resources>
    <string name="app_name">Recommend</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_second_name">Second Name</string>
    <string name="hint_user_name">Unique Username</string>
    <string name="already_created_account">Already created? Click here to login.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_question_hint">What would you like to get recommendations for?</string>
    <string name="question_sample">Hey my people!! I would recommendations on some good salon I can shuka ile style kama ya presenter wa KTN. Somebody please!!!</string>
</resources>
